Fixing Attributes page with scrollbar

--- a/style.css
+++ b/style.css
@@ -88,12 +88,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  max-width: 100%;
+  max-width: 400px;
   width: 100%;
   border: 0.1rem solid var(--white-border);
   border-radius: 5px;
   max-height: 100%;
-  height: auto;
+  height: 100%;
   max-height: 100px;
   padding: 5px;
   margin: 5px;
@@ -120,9 +120,7 @@ body {
 .block-item:nth-child(4) {
   line-height: 20px;
   letter-spacing: 0.8px;
-
 }
-
 
 .block-item img {
   width: 20%;
@@ -174,7 +172,9 @@ body {
   width: auto;
   margin-top: 20px;
   margin-bottom: 20px;
+  font-size: bold;
 }
+
 /* Slider style */
 .image-slider-container {
   width: 100%;
@@ -401,14 +401,15 @@ body {
 /* Table style */
 
 .tab-content {
-  display: none;
   width: 100%;
   height: 100%;
+  max-height: 600px;
   flex-direction: column;
   background-color: var(--white-text-color);
   color: black;
   text-align: center;
   margin-bottom: 20px;
+  overflow-y: auto;
 }
 
 table {
@@ -417,6 +418,15 @@ table {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 500px;
+  overflow-y: auto;
+
+}
+
+.table {
+  display: block;
+  overflow-y: auto;
+  height: 500px;
 }
 
 .td:nth-child(1) {
@@ -488,7 +498,7 @@ tr:has(td:first-child:not(:empty) + td:empty) {
   display: flex;
   max-width: 100%;
   height: 100%;
-  margin: 125px auto 60px auto;
+  margin: 95px auto 70px auto;
   flex-wrap: wrap;
   justify-content: center;
 }
